GUI-1621 datastore align fix2

--- a/stylesheets/less/partials/datastore.less
+++ b/stylesheets/less/partials/datastore.less
@@ -229,7 +229,7 @@ input {
         }
         input {
             .size(@width: ~"calc(100% - 260px)",
-                        @min-width: ~"calc(100% - 300px)", @max-width: 620px);
+                        @min-width: ~"calc(100% - 260px)", @max-width: 620px);
             box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
             float: left;
         }
@@ -238,7 +238,7 @@ input {
         &#fileNameSelector {
             input {
                 .size(@width: ~"calc(100% - 390px)",
-                        @min-width: ~"calc(100% - 430px)", @max-width: 490px);
+                        @min-width: ~"calc(100% - 390px)", @max-width: 490px);
             }
 
             #fileFormat {
